--- a/src/content/button.css
+++ b/src/content/button.css
@@ -52,7 +52,7 @@ input[type="reset"],
   padding-inline: var(--form-element-spacing-horizontal);
   border: var(--border-width) solid var(--border-color);
   border-radius: var(--border-radius);
-  outline: none;
+  outline-color: transparent;
   background-color: var(--background-color);
   box-shadow: var(--box-shadow);
   color: var(--color);
