--- a/src/content/form-alt-input-types.css
+++ b/src/content/form-alt-input-types.css
@@ -73,7 +73,7 @@ input:not([type="checkbox"], [type="radio"], [type="range"], [type="file"]) {
     padding-inline: calc(var(--form-element-spacing-horizontal) * 0.5);
     border: var(--border-width) solid var(--border-color);
     border-radius: var(--border-radius);
-    outline: none;
+    outline-color: transparent;
     background-color: var(--background-color);
     box-shadow: var(--box-shadow);
     color: var(--color);
